FirstGitProj/src/objects/Territory__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Box will be checked if the territory is still an active territory; unchecked if it was removed, merged, or split.</description>
        <inlineHelpText>The box will be checked if the territory is still active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPCS_Code__c</fullName>
        <label>BPCS Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <referenceTo>Region_New__c</referenceTo>
        <relationshipLabel>Territories</relationshipLabel>
        <relationshipName>Territories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <externalId>true</externalId>
        <label>Territory Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>Commercial_Territories</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Territory_Code__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Commercial</value>
        </filters>
        <label>Commercial Territories</label>
    </listViews>
    <listViews>
        <fullName>Residential_Territories</fullName>
        <columns>NAME</columns>
        <columns>Territory_Code__c</columns>
        <columns>Region__c</columns>
        <columns>BPCS_Code__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Residential</value>
        </filters>
        <label>Residential Territories</label>
    </listViews>
    <listViews>
        <fullName>Territories_All</fullName>
        <columns>NAME</columns>
        <columns>Territory_Code__c</columns>
        <columns>Active__c</columns>
        <columns>Type__c</columns>
        <columns>Region__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>BPCS_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Territories</label>
    </listViews>
    <listViews>
        <fullName>X01_Mid_Atlantic_Territories</fullName>
        <columns>NAME</columns>
        <columns>BPCS_Code__c</columns>
        <columns>Region__c</columns>
        <columns>Territory_Code__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>11,15</value>
        </filters>
        <label>01 - Mid Atlantic Territories</label>
    </listViews>
    <listViews>
        <fullName>X02_Northeast_Territories</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>BPCS_Code__c</columns>
        <columns>Region__c</columns>
        <columns>Territory_Code__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>2</value>
        </filters>
        <label>02 - Northeast Territories</label>
    </listViews>
    <listViews>
        <fullName>X03_Southeast_Territories</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>BPCS_Code__c</columns>
        <columns>Region__c</columns>
        <columns>Territory_Code__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>3</value>
        </filters>
        <label>03 - Southeast Territories</label>
    </listViews>
    <listViews>
        <fullName>X04_South_Central_Territories</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>BPCS_Code__c</columns>
        <columns>Region__c</columns>
        <columns>Territory_Code__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>4</value>
        </filters>
        <label>04 - South Central Territories</label>
    </listViews>
    <listViews>
        <fullName>X06_Southwest_Territories</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Territory_Code__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>BPCS_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>6</value>
        </filters>
        <label>06 - Southwest Territories</label>
    </listViews>
    <listViews>
        <fullName>X07_Northwest_Territories</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Region__c</columns>
        <columns>Territory_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>7</value>
        </filters>
        <label>07 - Northwest Territories</label>
    </listViews>
    <listViews>
        <fullName>X09_South_Atlantic_Territories</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Territory_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>9</value>
        </filters>
        <label>09 - South Atlantic Territories</label>
    </listViews>
    <listViews>
        <fullName>X16_Central_Territories</fullName>
        <columns>NAME</columns>
        <columns>Territory_Code__c</columns>
        <columns>Region__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>16</value>
        </filters>
        <label>16 - Central Territories</label>
    </listViews>
    <nameField>
        <label>Territory  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>